test/corpus/balises.txt
================================================================================
Simple balise with parentheses
================================================================================
(#TITRE)
--------------------------------------------------------------------------------

(template
  (balise
    name: (balise_name)))

================================================================================
Balise with filter
================================================================================
(#TITRE|couper{80})
--------------------------------------------------------------------------------

(template
  (balise
    name: (balise_name)
    (filter
      name: (filter_name)
      (filter_params
        value: (param_content)))))

================================================================================
Balise with multiple filters
================================================================================
(#LOGO_ARTICLE|image_reduire{200,150}|extraire_attribut{src})
--------------------------------------------------------------------------------

(template
  (balise
    name: (balise_name)
    (filter
      name: (filter_name)
      (filter_params
        value: (param_content)))
    (filter
      name: (filter_name)
      (filter_params
        value: (param_content)))))

================================================================================
Balise with oui/non filters
================================================================================
(#SOUSTITRE|oui)
--------------------------------------------------------------------------------

(template
  (balise
    name: (balise_name)
    (filter
      name: (filter_name))))

================================================================================
Balise with namespace
================================================================================
(#_lang:TITRE)
--------------------------------------------------------------------------------

(template
  (balise
    namespace: (balise_namespace)
    name: (balise_name)))

================================================================================
Shorthand balise
================================================================================
#TITRE
--------------------------------------------------------------------------------

(template
  (balise_shorthand
    name: (balise_name)))

================================================================================
Shorthand balise with namespace (loop reference)
================================================================================
#_maboucle:TITRE
--------------------------------------------------------------------------------

(template
  (balise_shorthand
    namespace: (balise_namespace)
    name: (balise_name)))

================================================================================
Shorthand balise with numeric namespace
================================================================================
#_boucle10:TITRE
--------------------------------------------------------------------------------

(template
  (balise_shorthand
    namespace: (balise_namespace)
    name: (balise_name)))

================================================================================
Balise with params
================================================================================
(#SET{name, value})
--------------------------------------------------------------------------------

(template
  (balise
    name: (balise_name)
    (balise_params
      value: (param_content))))
