test/corpus/comments.txt
================================================================================
Simple comment
================================================================================
[(#REM) This is a comment ]
--------------------------------------------------------------------------------

(template
  (comment))

================================================================================
Comment with SPIP-like content inside
================================================================================
[(#REM) ignore this <BOUCLE_foo(ARTICLES)> stuff ]
--------------------------------------------------------------------------------

(template
  (comment))

================================================================================
Comment surrounded by content
================================================================================
<div>
[(#REM) A comment ]
</div>
--------------------------------------------------------------------------------

(template
  (content)
  (comment)
  (content))
