test/corpus/multilingual.txt
================================================================================
Multi block
================================================================================
<multi>[fr]Bonjour[en]Hello</multi>
--------------------------------------------------------------------------------

(template
  (multi_block
    (lang_code)
    (multi_text)
    (lang_code)
    (multi_text)))

================================================================================
Translation string
================================================================================
<:spip:titre_page:>
--------------------------------------------------------------------------------

(template
  (translation))

================================================================================
Simple translation
================================================================================
<:connexion:>
--------------------------------------------------------------------------------

(template
  (translation))
